fix config data cannot load from elastic-config in elastic-query-service