@@ -4,8 +4,9 @@ import com.chibao.edu.elastic.model.index.impl.TwitterIndexModel;
 import com.example.elastic.query.service.common.model.ElasticQueryServiceResponseModel;
 import org.springframework.stereotype.Component;
 
+import java.time.Instant;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ElasticToResponseModelTransformer {
@@ -14,13 +15,13 @@ public class ElasticToResponseModelTransformer {
                 .id(twitterIndexModel.getId())
                 .userId(twitterIndexModel.getUserId())
                 .text(twitterIndexModel.getText())
-                .createdAt(twitterIndexModel.getCreatedAt())
+                .createdAt(Instant.from(LocalDateTime.from(twitterIndexModel.getCreatedAt())))
                 .build();
     }
 
     public List<ElasticQueryServiceResponseModel> getResponseModels(List<TwitterIndexModel> twitterIndexModels) {
         return twitterIndexModels.stream()
                 .map(this::getResponseModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
